added some edits

--- a/styles/About.scss
+++ b/styles/About.scss
@@ -28,6 +28,9 @@
           font-size: 35px;
           text-transform: uppercase;
         }
+        p {
+          font-size: 20px;
+        }
       }
       @media (max-width: 767px) {
         .about-content .about-welcome {
