--- a/styles/Featured.scss
+++ b/styles/Featured.scss
@@ -48,8 +48,8 @@
       }
     }
     .sub-title {
-      font-family: "Great Vibes", cursive;
       text-transform: uppercase;
+      font-weight: bold;
       font-size: 4rem;
       letter-spacing: 0.2rem;
       animation: fadeInLeft 0.6s 0.5s ease-in-out forwards;
@@ -58,7 +58,7 @@
     }
     .paragraph {
       color: #777777;
-      font-size: 1rem;
+      font-size: 20px;
       opacity: 0;
       transform: translateX(-20px);
       animation: fadeInLeft 0.6s 1s ease-in-out forwards;
